﻿GNomEx Release Notes
5.3.2
---------------------
*Added Institution Window to allow user to add and remove institutions

5.3.1
---------------------
* Added edit flow cell screen which allows for adding and removing channels and assigning different sequence lanes to a channel
* Added the ability to select a theme for experiment types on the experiment platform window
* Experiment types with unassigned themes are categorized under 'Other' header on seq setup tab on seq submission
* Increase width of billing description on confirm tab of Submit Request window.

5.3 (Sept 26, 2011)
---------------------
* Get rid of obsolete properties: pricesheet1_name, pricesheet1_url, pricesheet2_name, pricesheet2_url, ..., workauth_doc_url, workauth_pdf_url
* Added additional property initializations to gnomex_db_populate.sql
* Fixed bugs in sample sheet upload
* Redesigned several experiment/analysis windows to eliminate scroll bars when viewing at 1024x768.
* Provide more detailed instructions on launching the FDT upload/download from the browser.

5.2.9.1 (Sep 21, 2011)
----------------------
* Excluded getRequest from ExperimentFile XML to fix problem encountered in 'Add Services' after request to amend was selected.  Caused by E4X error when more than one 'Request' node encountered in XML.

5.2.9 (Sep 20, 2011)
----------------------
* Added session timeout warning dialog
* Fixed billing account dropdown bug on Submit Request window.  When another lab was selected, billing account dropdown did not refresh properly.
* Allow string parameters for CreateAnalysisMain (used in analysis pipeline)
* Set cookies on http Java apps to work with forms based authentication
* Added ability to associate multiple genome builds with an analysis
* Reformatted New Analysis window and added links to "Add/Edit..." organisms and genome builds
* Added privacyExpirationDate to Analysis and Request tables. Field is edited via visibility tab.